<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context="com.asadmansoor.werise.LoginActivity">

    <RelativeLayout
        android:id="@+id/top_container_rl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WeRise_title"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="36dp"
            android:textSize="24dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="129dp"
            android:id="@+id/werise_logo"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/app_title"
            android:layout_marginBottom="36dp"
            android:background="@drawable/werise" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_container_rl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_btn"
            android:text="@string/register_btn"
            android:textColor="@color/colorWhite"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/already_member_tv"
            android:text="@string/already_member_btn"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/register_btn"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/impact_investor_tv"
            android:text="@string/string_sign_up_as_impact_investor"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorPrimary"/>
    </RelativeLayout>
</LinearLayout>
