<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.asadmansoor.werise.Project">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="68dp"
        android:background="@drawable/create"
        android:id="@+id/create_pic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_tv"
        android:text="@string/create_project_title"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/create_pic"
        android:layout_marginTop="24dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_project"
        android:text="@string/create_project_btn"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:layout_below="@id/create_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="64dp"
        android:layout_marginLeft="64dp"
        android:id="@+id/line"
        android:layout_below="@id/create_project"
        android:layout_marginTop="32dp"
        android:background="#CCCCCCCC"
        ></View>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="68dp"
        android:id="@+id/view_pic"
        android:background="@drawable/view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:layout_below="@id/line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_tv"
        android:text="@string/join_project_title"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/view_pic"
        android:layout_marginTop="24dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_project"
        android:text="@string/join_project_btn"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:layout_below="@id/view_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />


</RelativeLayout>
