<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.asadmansoor.werise.RegisterAccountActivity"
    tools:showIn="@layout/activity_register_account">

    <ImageView
        android:id="@+id/profile_pic_iv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <ImageButton
        android:id="@+id/edit_profile_pic_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_menu_camera"
        android:layout_alignTop="@id/profile_pic_iv"
        android:layout_alignRight="@id/profile_pic_iv"
        android:layout_alignEnd="@id/profile_pic_iv" />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_title"
        android:textStyle="bold"
        android:layout_below="@id/profile_pic_iv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp" />

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/name_tv"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/about_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_me_title"
        android:textStyle="bold"
        android:layout_below="@id/name_et"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/about_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/about_tv"
        android:inputType="text" />

    <TextView
        android:id="@+id/location_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_title"
        android:textStyle="bold"
        android:layout_below="@id/about_et"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/location_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/location_tv"
        android:inputType="text" />

    <TextView
        android:id="@+id/causes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/causes_title"
        android:textStyle="bold"
        android:layout_below="@id/location_et"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/causes_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/causes_tv"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp">
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/selected_causes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:layout_below="@id/causes_rv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />


</RelativeLayout>
